Se crea la interfaz en Andriod y se utiliza el código compartido del proyecto PCL

--- a/PlatziTrips/PlatziTrips/PlatziTrips.Android/PlatziTrips.Android.csproj
+++ b/PlatziTrips/PlatziTrips/PlatziTrips.Android/PlatziTrips.Android.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>05a6530b-6ecf-4426-b990-4d7342b23784</ProjectGuid>
+    <ProjectGuid>{05A6530B-6ECF-4426-B990-4D7342B23784}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>PlatziTrips.Droid</RootNamespace>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
@@ -44,11 +44,6 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PlatziTrips\PlatziTrips.csproj">
-      <Name>PlatziTrips</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -66,6 +61,12 @@
     <AndroidResource Include="Resources\drawable-xhdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\Icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PlatziTrips\PlatziTrips.csproj">
+      <Project>{6fddf1f5-eb0a-4f65-801e-b8442cd12149}</Project>
+      <Name>PlatziTrips</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
 </Project>
