Se crea vista para listar los viajes creados por medio de un LisActivity, se crean funcinalidades de leer, guardar nuevos viajes, se incia con Material Design con las propiedades del archivo String.xml

--- a/PlatziTrips/PlatziTrips/PlatziTrips.Android/PlatziTrips.Android.csproj
+++ b/PlatziTrips/PlatziTrips/PlatziTrips.Android/PlatziTrips.Android.csproj
@@ -62,7 +62,9 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ListaViajeActivity.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="NuevoViajeActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -71,10 +73,17 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
+    <AndroidResource Include="Resources\layout\NuevoViaje.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\Main.axml" />
-    <AndroidResource Include="Resources\values\Strings.xml" />
+    <AndroidResource Include="Resources\layout\Main.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\values\Strings.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <AndroidResource Include="Resources\drawable-hdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-mdpi\Icon.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\Icon.png" />
