--- a/PlatziTrips/PlatziTrips/PlatziTrips.Android/Properties/AndroidManifest.xml
+++ b/PlatziTrips/PlatziTrips/PlatziTrips.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="PlatziTrips.Android"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="23" />
+	<application android:label="PlatziTrips.Android" android:theme="@style/AppTheme"></application>
 </manifest>
