--- a/PlatziTrips/PlatziTrips/PlatziTrips/PlatziTrips.csproj
+++ b/PlatziTrips/PlatziTrips/PlatziTrips/PlatziTrips.csproj
@@ -31,8 +31,12 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Classes\Categorias.cs" />
     <Compile Include="Classes\DataBaseHelper.cs" />
+    <Compile Include="Classes\FoursquareHelper.cs" />
+    <Compile Include="Classes\Helper\Constantes.cs" />
     <Compile Include="Classes\InicioSesion.cs" />
+    <Compile Include="Classes\Lugares.cs" />
     <Compile Include="Classes\Viaje.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -65,6 +69,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
